# Diary_Podcast_Recommender

./: .gitignore  Dockerfile  README.md  brainstorm.md  dashboard_app.py  main.py  main_inference.py  pyproject.toml  sentiment_logic.md
.github/workflows/: ci.yml
data/processed/: processed_snapshot.csv  processed_snapshot2.csv  processed_snapshot3.csv  processed_snapshot4.csv
data/raw/: 2025_Pod_10_The_Charisma_teacher.csv  2025_Pod_12_The_No_1_Brain_Doctor.csv  2025_Pod_13_Alex_Hormozi.csv  2025_Pod_14_The_Sex_Psychologist.csv  2025_Pod_16_Secret_agent.csv  2025_Pod_17_Robert_Greene.csv  2025_Pod_19_Creatine.csv  2025_Pod_20_No_1_communication_Expert.csv  2025_Pod_21_Anxiety_Fear_Dr._Joe_Dispenza.csv  2025_Pod_22_Speaking_Coach.csv  2025_Pod_24_$130_Billion_Company.csv  2025_Pod_25_Hormone_Expert.csv  2025_Pod_27_CorruptCop.csv  2025_Pod_28_Peter_Attia.csv  2025_Pod_29_Body_Language.csv  2025_Pod_2_Exercise & Nutrition Scientist.csv  2025_Pod_30_No.1_Nitric_Oxide_Expert.csv  2025_Pod_3_habits_fertility.csv  2025_Pod_4_Jordan_B_Peterson.csv  2025_Pod_5_The_Keto_psychiatrist.csv  (+3 more)
notebooks/: 00_youtube_api_solo_video_scrape.ipynb  02_eda_v2.ipynb  03_append_all_podcasts.ipynb  04_eda_model_choice.ipynb  05_top_funnel.ipynb  06_comments_analytics.ipynb  Lowrie_YT_scraping.ipynb  channels_cache.json  sentiment_cache.sqlite
scripts/: run_classify_topics.py  run_compute_kpis.py  run_extract_guests.py  run_prepare_top_funnel.py
src/: guests_extraction.py  kpi_calculations.py  preprocess.py  sentiment_analysis.py  topic_classification.py  utils.py
(+1 files in other folders)
